# Vargrind

./: .gitignore  LICENSE.txt  Makefile.am  README.md  SetupVargrind.sh  build-valgrind.sh  issue.md  script.py
Patches/: check_headers_and_includes.patch  patch.Makefile.am  patch.configure.ac
docs/: notes_for_trace_function.md  references.bib  vargrind.md  vr_manual_raw.md
include/: Makefile.am
literature/: links.md
src/: vargrind.h  vr_dynamic.c  vr_events.c  vr_get_set_node.c  vr_get_set_node.h  vr_hash.c  vr_hash.h  vr_include.h  vr_main.c  vr_output.c  vr_output.h  vr_regex.c  vr_regex.h  vr_stack.c  vr_stack.h  vr_trace_functions.c  vr_trace_functions.h
tests/: Makefile
